# awiki

./: .gitignore  .hgignore  INSTALL.sh  README  README.md  awiki  bib.bib  cextremal.md  comparison.md  decoherence.md  download_all  geckosetup  getbibs  hocico.md  index.md  page.md  pages.txt  pyproject.toml  remove.py  sandwiched.md  spectral.md  state-effect.md  sufficiency.md  tpdea.md
awiki/: awiki.py  config.py  data.py  err.py  page.py  server.py
awiki_data/markdown_templates/: page.template.md
awiki_data/templates/: add.html  add_page.html  arxiv_page.html  base.html  edit_page.html  file_exists.html  page.html  pwd_add.html  pwd_remove.html  results.html  search.html  stripbase.html
pages/: Open positions for excellent R2 researchers in Quantum foundations and_or Quantum information theory EURAXESS.html  bib.bib  broken.py  loadpages.py  myown.py  page.md
pages/.cache/: arxiv.orgabs1303.08566,cc54711b201c6f0b2137fd8f5f588767  arxiv.orgabs1307.0363,233c6d7921b41c071a534900fb4d67f8  arxiv.orgabs1403.08566,50362c7c44695e2c3d2ab1bef9651e0a  arxiv.orgabs1508.03103,934c1340ab9b9cca44be80d1d16888c6  arxiv.orgabs1508.03107,7f5ca12c7357a3f36bdc956e77dcc370  arxiv.orgabs1508.03876,e1069155bfb07e54f6ea620c497a5b10  arxiv.orgabs1509.00001,a86f07a2fad714dbfa11b7a78d33e51a  arxiv.orgabs1512.00001,9e073e0ae99494be0d0c783cda04382d  arxiv.orgabs1512.00701,26b3cdbe9f25d52d8c07bc2dc11d2649  arxiv.orgabs1512.00901,6b01b64e1a58c48bb1acabf2e4057c4f  arxiv.orgabs1601.00001,cfbcf2eac1aadc8756267aea29fdda2d  arxiv.orgabs1603.00001,23dcd8b9a39119a6b6f2f3034e6933e0  arxiv.orgabs1603.08566,20b031a3cf3a06051a26288fceb5d2db  arxiv.orgabs1706.00081,bf4539ccb12b8669a5cf542229973460  arxiv.orgabs1803.08566,91553e1e296cd32ef37ddc3bad8842ff  arxiv.orgabs1909.05613,86d2d04b46768d082b73f25b211d59ef  arxiv.orgabs2003.08548,86425abadf657f342b78c8c23e7ecabe  arxiv.orgabs2003.08566,8431979e9c47cc62c6211307eb676a66  arxiv.orgabs2003.08568,198dc9a98da4a46b09d88e504df65555  arxiv.orgabs2003.08589,96407a21d43f1d5c9622c64c343f26b9  arxiv.orgabs2011.06497,5ef7b2e777dbb4e9306570203f7bd3f7  arxiv.orgabs2011.10041,15e95063d75a1d67b8d651e54315e488
pages/ADS/: page.md
pages/APAGE/: bib.bib  page.md
pages/APROJECT/: page.md
pages/AREFEREE/: page.md
pages/ARI/: page.md
pages/ATALK/: page.md
pages/AZ_crl/: page.md
pages/AZ_dichotomies/: page.md
pages/AZ_qht/: .notes.tex.swp  notes.tex  page.md
pages/BIBs/: .bib.bib.swp  bib.bib  page.md
pages/BOOK_alfsen1971compact/: bib.bib  page.md
pages/BOOK_alfsen1976noncommutative/: bib.bib  page.md
pages/BOOK_alfsen2003geometry/: bib.bib  page.md
pages/BOOK_amari2000methods/: bib.bib  page.md
pages/BOOK_ay2017information/: bib.bib  page.md
pages/BOOK_beauzamy1982introduction/: bib.bib  page.md
pages/BOOK_bergh1976interpolation/: bib.bib  page.md
pages/BOOK_diestel1975geometry/: bib.bib  page.md
pages/BOOK_ekeland1999convex/: bib.bib  page.md
pages/BOOK_hanche1984jordan/: bib.bib  page.md
pages/BOOK_hayashi2017quantum/: bib.bib  page.md
pages/BOOK_hiai2021lectures/: bib.bib  page.md
pages/BOOK_hiai2021quantum/: bib.bib  cocycles.tex  page.md
pages/BOOK_krasnoselskij1961convex/: bib.bib  page.md
pages/BOOK_ohya1993quantum/: bib.bib  page.md
pages/BOOK_paulsen2002completely/: bib.bib  page.md
pages/BOOK_phelps2001lectures/: bib.bib  page.md
pages/BOOK_rao1991theory/: bib.bib  page.md
pages/BOOK_ryan2002introduction/: bib.bib  page.md
pages/BOOK_strasser1985mathematical/: bib.bib  page.md
pages/BOOK_stratila1979lectures/: bib.bib  page.md
pagetools/: __init__.py  arxiv.py  loadpage.py  pathos.py  remove.py  search.py  search_works.py  special.py  steal.py  tex.py
templates/: add.html  base.html  edit_page.html  file_exists.html  page.html  pwd_add.html  pwd_remove.html  results.html  search.html
(+1403 files in other folders)
