[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name="awiki"
version="0.1.5"
dependencies=[
	"flask",
	"pyaml",
	"WTForms",
	"markdown",
	"lxml",
	"requests",
	"beautifulsoup4",
	"unidecode",
	"python-magic",
	"chardet"
]
[project.scripts]
awiki = "awiki:main"
[tool.setuptools.packages.find]
where = ["src"]
[tool.setuptools.data-files]
# Static JavaScript files
"share/awiki/static/js" = [
    "awiki_data/static/js/*",
]

# Static CSS files
"share/awiki/static/css" = [
    "awiki_data/static/css/*",
]

# Static CodeMirror related files
"share/awiki/static/codemirror" = [
    "awiki_data/static/codemirror/codemirror.css",
    "awiki_data/static/codemirror/vim.js",
    "awiki_data/static/codemirror/dialog.css",
    "awiki_data/static/codemirror/dialog.js",
    "awiki_data/static/codemirror/searchcursor.js",
    "awiki_data/static/codemirror/codemirror.js",
    "awiki_data/static/codemirror/darcula.css",
]

# CodeMirror Markdown mode directory (subdirectory)
"share/awiki/static/codemirror/mode/markdown" = [
    "awiki_data/static/codemirror/mode/markdown/*",
]

# Favicon file
"share/awiki/static/favicon" = [
    "awiki_data/static/favicon/*",
]
# FontAwesome
"share/awiki/static/fonts" = [
    "awiki_data/static/fonts/*"
]
# Template files
"share/awiki/templates" = [
    "awiki_data/templates/*"
]

"share/awiki/markdown_templates" = [
    "awiki_data/markdown_templates/page.template.md"
]
